ユーザー編集機能の実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,6 +4,9 @@ ja:
     email: メールアドレス
     password: パスワード
     password_confirmation: パスワード (確認)
+    current_password: 現在のパスワード
+    icon: アイコン
+    header_image: ヘッダー
     images: 画像
     description: 説明
     category_id: カテゴリー
