ユーザー編集画面の実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,7 @@ ja:
     current_password: 現在のパスワード
     icon: アイコン
     header_image: ヘッダー
+    introduce: 自己紹介
     images: 画像
     description: 説明
     category_id: カテゴリー
